# cobbler

./: .gitignore  .ocamlformat  ARCHITECTURE.md  ARTIFACT_EVALUATION.md  DEPENDENCIES.md  Dockerfile  Makefile  README.md  after_eqsat.txt  before_eqsat.txt  cobbler  component_based_refactoring.opam  dune  dune-project  github_readme.md  helper.sh  output.txt  requirements.txt  run-evaluation.sh  run_evaluation.sh  setup.py  todo.txt
backend/: .ocamlformat  Makefile  cobbler.opam  dune  dune-project
backend/lib/cbr_fp/: cbr_debug.ml  dune  exp.ml  exp.mli  fusion.ml  fusion.mli  lang.ml  parse.ml  parse.mli  parse_json.ml  parse_json.mli  recursion_scheme.ml  recursion_scheme.mli  synthesis.ml  synthesis.mli  typ.ml  typ.mli  type_system.ml  type_system.mli  unification.ml  unification.mli  unification_adapter.ml  unification_adapter.mli  unparse_elm.ml  unparse_elm.mli
backend/lib/cbr_framework/: dune  enumerative_search.ml  enumerative_search.mli
backend/lib/cbr_numpy/: dune  egraph.ml  egraph.mli  env.ml  env.mli  inline.ml  inline.mli  lang.ml  make_trace.ml  make_trace.mli  np_synthesis.ml  np_synthesis.mli  parse.ml  parse.mli  partial_eval.ml  partial_eval.mli  partial_eval_trace.ml  partial_eval_trace.mli  unification.ml  unification.mli
backend/lib/util/: ablation.ml  ablation.mli  dune  timing_breakdown.ml  timing_breakdown.mli  util.ml  util.mli
backend/test/test_cbr_fp/: common.mli  test_exp.ml  test_fusion.ml  test_parse_json.ml  test_recursion_scheme.ml  test_synthesis.ml  test_type_system.ml  test_unification.ml
backend/test/test_cbr_numpy/: dune  (+6 more)
(+782 files in other folders)
