(lang dune 3.0)

(name cobbler)

(generate_opam_files true)

(source
 (github justinlubin/cobbler))

(authors
  "Justin Lubin"
  "Jeremy Ferguson"
  "Kevin Ye"
  "Jacob Yim")

(maintainers "justinlubin@berkeley.edu")

(license BSD-3-Clause)

(package
 (name cobbler)
 (synopsis "The Cobbler program synthesizer for refactoring using libraries")
 (depends
  (ocaml
   (>= 4.14.0))
  dune
  core
  ocamldot
  ppx_jane
  ppx_deriving
  ego
  (bisect_ppx
   (and
    :dev
    (>= "2.5.0")))))
